--- a/batailleNavale/Base.lproj/Main.storyboard
+++ b/batailleNavale/Base.lproj/Main.storyboard
@@ -260,7 +260,7 @@
         <!--Battle View Controller-->
         <scene sceneID="l6D-8n-3Vs">
             <objects>
-                <viewController storyboardIdentifier="NextSegue" id="6oY-j4-clG" customClass="BattleViewController" customModule="batailleNavale" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="6oY-j4-clG" customClass="BattleViewController" customModule="batailleNavale" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2CA-YP-uaG">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
